# GamesProgrammingExam

./: .gitignore  BackgroundComponent.cpp  BackgroundComponent.hpp  BirdController.cpp  BirdController.hpp  BirdGame.cpp  BirdGame.hpp  CMakeLists.txt  Debug.cpp  Dungeon.cpp  Dungeon.h  DungeonGame.cpp  DungeonGame.h  GameObject.hpp  GameObjects.json  GameState.cpp  GameState.h  Level.cpp  Level.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PhysicsComponent.cpp  PhysicsComponent.hpp  PlayState.cpp  PlayState.h  Player.cpp  Player.h  Scene.cpp  Scene.h  SpriteAnimationComponent.cpp  SpriteManager.cpp  SpriteManager.hpp  TileMap.cpp  TileMap.hpp  TopDownCameraComponent.cpp  TopDownCameraComponent.h  main.cpp  prefab_templates.json  (+2 more)
AI/: NavigationComponent.cpp  NavigationComponent.h  Pathfinding.cpp  Pathfinding.h
Commands/: Command.cpp  Command.h  MoveCommand.cpp  MoveCommand.h
Components/: AudioComponent.cpp  AudioComponent.h  BulletComponent.cpp  BulletComponent.h  Component.cpp  Component.h  GranadeComponent.cpp  GranadeComponent.h  GrenadeComponent.cpp  GrenadeComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  SpriteAnimationComponent.cpp  SpriteAnimationComponent.h  SpriteComponent.cpp  SpriteComponent.h  TopDownCameraComponent.cpp  TopDownCameraComponent.h  Transform.cpp  Transform.h  WeaponComponent.cpp  WeaponComponent.h
Dungeon/: Dungeon.cpp  Dungeon.h  NormalDungeon.cpp  NormalDungeon.h  Room.cpp  Room.h
FMOD/DungeonGame/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
FMOD/DungeonGame/Metadata/Asset/: {f7a302b6-96be-4639-b314-31ce9cf6fa16}.xml
FMOD/DungeonGame/Metadata/AudioFile/: {4c634bd2-be7a-4d68-8ff9-51f6d8404eaf}.xml  {5179e27d-ef99-41d4-8d70-9fcea2d7ab17}.xml  {6a361d01-a0e8-4f75-b3b4-8194d4961fa8}.xml  {95ebccee-a46a-4fa2-adba-e1d87fdbe3e0}.xml  {b14ea8a9-1879-463f-9be1-d5e983bf67ae}.xml  {ccc21964-e4ab-4001-ab34-b3243c2f16c0}.xml
FMOD/DungeonGame/Metadata/Bank/: {2fbd464c-d51a-4a2c-bfd2-6f1404702d0e}.xml
FMOD/DungeonGame/Metadata/BankFolder/: {d909d85d-50aa-4294-a9f6-21e65a93abf6}.xml
FMOD/DungeonGame/Metadata/EffectPresetFolder/: {e8b0685b-76bd-491c-8c0d-ecc28affe20d}.xml
FMOD/DungeonGame/Metadata/EncodingSetting/: {3fa0ad27-c276-43ad-83ac-0a582064eda9}.xml  {a74201cb-3cba-40fc-99dc-428be4d67fcf}.xml
FMOD/DungeonGame/Metadata/Event/: {0e2445fc-3af1-4cdc-92a9-98daa4ea8794}.xml  {17e9523f-29ea-4bf5-8705-eed71f31e61c}.xml  {5ddae346-5d38-4f82-8fa1-22a1dc738145}.xml  {68f94097-83a2-44bd-af2e-a22b84fe1f5e}.xml  {b09f51d6-c3bc-4f57-9b3b-26f1ddc49285}.xml  {f42d9da8-0a4c-47a9-ba67-a1c07d120bde}.xml
FMOD/DungeonGame/Metadata/EventFolder/: {4c97048d-6078-49ec-96e8-b180f9c35810}.xml  {59ed37f0-b6c7-4dff-8796-abb938a788bd}.xml
FMOD/DungeonGame/Metadata/ParameterPresetFolder/: {90e84122-7577-4e5f-b701-49806c79ffac}.xml
FMOD/DungeonGame/Metadata/Platform/: {b21b87a3-b1c8-4828-85f1-04d26c23ec15}.xml
FMOD/DungeonGame/Metadata/ProfilerFolder/: {35518aaf-41e1-4db4-9523-dd48be501677}.xml
FMOD/DungeonGame/Metadata/Return/: {99c20e83-f56d-4aa2-a5ce-6823a9be9eb8}.xml
FMOD/DungeonGame/Metadata/SandboxFolder/: {f9e263d4-94c1-4815-a1b8-1960de5d6870}.xml
FMOD/DungeonGame/Metadata/SnapshotGroup/: {9595d74b-a4d9-4d9f-acbe-e61987bd2ed7}.xml
Game/: DungeonGame.cpp  DungeonGame.h  GameObject.cpp  GameObject.h  ResourceLoader.cpp  ResourceLoader.h  SpriteManager.cpp  SpriteManager.h  main.cpp
GameStates/: GameState.cpp  GameState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h
Managers/: AudioManager.cpp  AudioManager.h  PrefabManager.cpp  PrefabManager.h
Player/: Player.cpp  Player.h
Sprites/: Tile.cpp  Tile.h  TileMap.cpp
Utility/: Box2DDebugDraw.cpp  Debug.cpp  Debug.h  FileLoader.cpp  FileLoader.h
